tests/baselines/reference/parserAmbiguity1.errors.txt
parserAmbiguity1.ts(1,1): error TS2304: Cannot find name 'f'.
parserAmbiguity1.ts(1,3): error TS2304: Cannot find name 'g'.
parserAmbiguity1.ts(1,5): error TS2304: Cannot find name 'A'.
parserAmbiguity1.ts(1,8): error TS2304: Cannot find name 'B'.


==== parserAmbiguity1.ts (4 errors) ====
    f(g<A, B>(7));
    ~
!!! error TS2304: Cannot find name 'f'.
      ~
!!! error TS2304: Cannot find name 'g'.
        ~
!!! error TS2304: Cannot find name 'A'.
           ~
!!! error TS2304: Cannot find name 'B'.